--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "helmet": "^4.6.0",
+    "moment": "^2.30.1",
     "mongodb": "^5.6.0",
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
