feat: Implemented search-by-domain and search-by-domain/bulk endpoints
- Created new endpoints for domain search and bulk domain search
- Implemented domainController.js and domainBulkController.js
- Added sanitizeDomain function in domainUtils.js for domain normalization
- Implemented caching for domain sanitization to improve performance
- Updated routes to include new domain search endpoints
- Ensured consistency with existing login search endpoints
- Added error handling and logging for domain search operations
- Updated API documentation to include new domain search endpoints

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "punycode": "^2.3.1",
     "redis": "^3.1.2",
+    "tldts": "^6.1.54",
     "uuid": "^10.0.0",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^5.0.0"
