Enhanced date normalization and handling
- Updated dateService.js with improved parsing methods
- Added support for multiple date formats and invalid date strings
- Implemented custom date parsing for edge cases
- Expanded dateNormalizationMiddleware to handle nested data structures
- Updated domainController and domainBulkController with sanitization
- Improved logging and error handling in date-related operations
- Created comprehensive documentation for Date Handling, Normalization, and Sorting

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node --no-deprecation app.js",
     "dev": "nodemon app.js",
-    "test": "jest"
+    "test": "jest",
+    "test:dates": "node -e \"require('./services/dateService').testParseDates()\""
   },
   "author": "",
   "license": "ISC",
