--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redis": "^3.1.2",
     "tldts": "^6.1.54",
     "uuid": "^10.0.0",
+    "validator": "^13.12.0",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
