--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ MONGODB_DATABASE=dev
 
 PORT=3000
 
-API_KEY=test
-
 REDIS_URL=redis://localhost:6379
 
+DATABASE_URL=postgresql://postgres.fylzykeqxelimcvvontn:vym6NCH@hze-qfy_zfd@aws-0-us-east-1.pooler.supabase.com:6543/postgres
+NODE_ENV=development
+
+ADMIN_PASSWORD=testpass
