--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^6.7.1",
     "helmet": "^4.6.0",
+    "ioredis": "^5.4.1",
     "moment": "^2.30.1",
     "mongodb": "^5.6.0",
     "mongoose": "^8.7.2",
@@ -28,6 +29,7 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "punycode": "^2.3.1",
+    "rate-limit-redis": "^4.2.0",
     "redis": "^3.1.2",
     "sequelize": "^6.37.4",
     "tldts": "^6.1.54",
