--- a/.env
+++ b/.env
@@ -4,8 +4,11 @@ MONGODB_DATABASE=dev
 PORT=3000
 
 REDIS_URL=redis://localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
 DATABASE_URL=postgresql://postgres.fylzykeqxelimcvvontn:vym6NCH@hze-qfy_zfd@aws-0-us-east-1.pooler.supabase.com:6543/postgres
 NODE_ENV=development
 
 ADMIN_PASSWORD=testpass
+
