almost perfected api key usage and management

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ DATABASE_URL=postgresql://postgres.fylzykeqxelimcvvontn:vym6NCH@hze-qfy_zfd@aws-
 NODE_ENV=development
 
 ADMIN_PASSWORD=testpass
-
+DEFAULT_TIMEZONE=UTC
