--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "helmet": "^4.6.0",
     "ioredis": "^5.4.1",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mongodb": "^5.6.0",
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "punycode": "^2.3.1",
