--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ansi-colors": "^4.1.3",
     "cls-hooked": "^4.2.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
